--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
     // =================================================================
     const SUPABASE_URL = 'https://atrhsfozgnfhhbfxgsnu.supabase.co';
     const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImF0cmhzZm96Z25maGhiZnhnc251Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTA4NjQ3MTYsImV4cCI6MjA2NjQ0MDcxNn0.eGODASElOsWJZ_cXmumZZwdQlcBGahm89n2UCuUxWk8';
-    const GEMINI_API_KEY = 'YOUR_GEMINI_API_KEY'; // Please replace with your actual Gemini API key
+    const GEMINI_API_KEY = 'AIzaSyA9-7HkBuizbyS4a2ZBnTmq9jXGj_WEOuo'; // Please replace with your actual Gemini API key
     const GEMINI_API_URL = `https://generativelanguage.googleapis.com/v1beta/models/gemini-pro:generateContent?key=${GEMINI_API_KEY}`;
     
     // =================================================================
