--- a/index.html
+++ b/index.html
@@ -1208,7 +1208,7 @@
 
     const showSupportRequest = () => {
         const content = `
-            <p class="mb-4">برای دریافت پشتیبانی، لطفاً با ایمیل support@saino.app در تماس باشید یا فرم زیر را پر کنید.</p>
+            <p class="mb-4">برای دریافت پشتیبانی، لطفاً با ایمیل info@psynoland.ir در تماس باشید یا فرم زیر را پر کنید.</p>
             <form id="support-form">
                 <textarea class="w-full h-32 p-2 border rounded-lg" placeholder="مشکل خود را اینجا شرح دهید..."></textarea>
                 <button type="submit" class="mt-2 w-full bg-teal-500 text-white py-2 rounded-lg font-semibold">ارسال درخواست</button>
